Ajuste das urls e permissões dos aplicativos para funcionamento adequado no docker